<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group>

    </group>
    <item
        android:id="@+id/alarms_nav"
        android:enabled="true"
        android:icon="@drawable/ic_user_circle_24"
        android:title="@string/user_destination_label"
        />
    <item
        android:id="@+id/schedule_nav"
        android:enabled="true"
        android:icon="@drawable/ic_admin_panel_settings_24"
        android:title="@string/admin_destination_label"/>
    <item
        android:id="@+id/timer_nav"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/timer_destination_label"/>
    <item
        android:id="@+id/stopwatch_nav"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/stopwatch_destination_label"/>
</menu>