<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.classroom.ClassroomAddFragment">




    <LinearLayout
        android:id="@+id/editsLyt"
        android:background="@drawable/bg_content10_lyt"
        android:elevation="2dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:targetApi="lollipop"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/titleBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="?colorPrimary"
            android:fontFamily="@font/cairo_black"
            android:layout_marginBottom="32dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:text="ادخل بيانات المطلوب  إضافة قاعة" />
        <!-- حقل اسم المستخدم -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:minWidth="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_semibold"
                android:paddingHorizontal="8dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:text="@string/label_name_classroom"/>

            <EditText
                android:id="@+id/nameClassroomEditText"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                android:ems="15"
                android:maxLength="50"
                android:textColorHint="@color/hint_foreground_material_light"
                android:hint="@string/label_hint_name_classroom"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />
        </LinearLayout>


        <!-- حقل تاريخ الحجز -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="250dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_semibold"
                android:paddingHorizontal="8dp"
                android:ems="16"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:text="@string/label_avail_devices"/>

           <CheckBox android:id="@+id/projector"
               android:layout_height="wrap_content"
               android:text="@string/lbl_projector"
               android:layout_width="match_parent"/>
            <CheckBox
                android:id="@+id/lighting"
                android:layout_height="wrap_content"
                android:text="@string/lbl_lighting"
                android:layout_width="match_parent"/>

            <CheckBox
                android:id="@+id/aC"
                android:layout_height="wrap_content"
                android:text="@string/lbl_ac"
                android:layout_width="match_parent"/>
        </LinearLayout>

        <!-- حقل وقت الحجز -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_semibold"
                android:paddingHorizontal="8dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:text="@string/label_capacity_classroom"/>
            <EditText
                android:id="@+id/capacityEditText"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:ems="15"
                android:inputType="number"
                android:maxLength="4"
                android:background="@drawable/edit_text_background"
                android:layout_height="wrap_content"
                android:hint="@string/label_hint_capacity_classroom"
                tools:ignore="Autofill" />
        </LinearLayout>

        <!-- زر حجز القاعة -->
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textStyle="bold"
            android:gravity="center"
            android:ems="8"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:text="@string/LABEL_ADD"
            tools:targetApi="m" />
    </LinearLayout>

</LinearLayout>