<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".core.light_control_wifi.WiFiActivity"
    android:id="@+id/layoutMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Not yet connected."
        android:id="@+id/textStatus"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/device"
            android:id="@+id/textView3" />

        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="IP Address"
            android:inputType="text"
            android:background="@drawable/edit_text_background"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:background="@drawable/edit_text_background"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:inputType="number"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:onClick="connectButtonPressed"
            android:layout_weight="1" />

        <Button
            android:id="@+id/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@string/disconnect"
            android:onClick="disconnectButtonPressed"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[RX] "
            android:id="@+id/textView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textRX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Nothing received yet..."
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[TX] "
            android:id="@+id/textView4"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textTX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Nothing sent yet..."
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/edit_text_background"
            android:id="@+id/editSend"
            android:hint="Type message..."
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/buttonSend"
            android:onClick="sendButtonPressed"
            android:layout_weight="0.39" />
    </LinearLayout>

</LinearLayout>